"""BUILD file for LLM providers"""

load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "providers",
    srcs = glob(["*.py"]),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("openai"),
        requirement("google-genai"),
        requirement("pydantic"),
    ],
)