"""BUILD file for storage repositories"""

load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "repositories",
    srcs = glob(["*.py"]),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("sqlalchemy"),
        requirement("pydantic"),
        "//src/family_assistant/utils",
    ],
)